Fixed styles overspilling issue

--- a/src/components/templates/NewsletterSignupTemplate.scss
+++ b/src/components/templates/NewsletterSignupTemplate.scss
@@ -27,7 +27,7 @@ li {
 }
 
 .text-container {
-    padding: 40px 24px;
+    padding: 0px 24px;
     color: $Dark-navy;
     line-height: 1.5;
 }
